crates/kirin-derive-core-old/src/kirin/field/snapshots/kirin_derive_core__kirin__field__tests__enum_global_wrapper.snap
---
source: crates/kirin-derive-core/src/kirin/field/tests.rs
expression: "case!\n{\n    #[wraps] #[kirin(type_lattice = AnotherLattice)] enum TestEnum<T>\n    { VariantA { wrapped: InnerStructA<T> }, VariantB(InnerStructB), }\n}"
---
#[automatically_derived]
impl<'a, T> kirin::ir::HasArguments<'a> for TestEnum<T> {
    type Iter = TestEnumArgumentsIter<'a, T>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            Self::VariantA { wrapped } => TestEnumArgumentsIter::VariantA(
                <InnerStructA<T> as HasArguments>::arguments(wrapped),
            ),
            Self::VariantB(field_0) => {
                TestEnumArgumentsIter::VariantB(<InnerStructB as HasArguments>::arguments(field_0))
            }
        }
    }
}
#[automatically_derived]
pub enum TestEnumArgumentsIter<'a, T> {
    VariantA(<InnerStructA<T> as HasArguments<'a>>::Iter),
    VariantB(<InnerStructB as HasArguments<'a>>::Iter),
}
#[automatically_derived]
impl<'a, T> Iterator for TestEnumArgumentsIter<'a, T> {
    type Item = &'a kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::VariantA(inner) => inner.next(),
            Self::VariantB(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a, T> kirin::ir::HasArgumentsMut<'a> for TestEnum<T> {
    type IterMut = TestEnumArgumentsMutIter<'a, T>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::VariantA { wrapped } => TestEnumArgumentsMutIter::VariantA(
                <InnerStructA<T> as HasArgumentsMut>::arguments_mut(wrapped),
            ),
            Self::VariantB(field_0) => TestEnumArgumentsMutIter::VariantB(
                <InnerStructB as HasArgumentsMut>::arguments_mut(field_0),
            ),
        }
    }
}
#[automatically_derived]
pub enum TestEnumArgumentsMutIter<'a, T> {
    VariantA(<InnerStructA<T> as HasArgumentsMut<'a>>::IterMut),
    VariantB(<InnerStructB as HasArgumentsMut<'a>>::IterMut),
}
#[automatically_derived]
impl<'a, T> Iterator for TestEnumArgumentsMutIter<'a, T> {
    type Item = &'a mut kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::VariantA(inner) => inner.next(),
            Self::VariantB(inner) => inner.next(),
        }
    }
}
